force-app/main/default/objects/CodigoPromocional__c/CodigoPromocional__c.object-meta.xml
<CustomObject>
    <label>Promoção</label>
    <nameField>
        <label>Código Promocional</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promoções</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>