force-app/main/default/objects/CodigoPromocional__c/fields/DescontoServicos__c.field-meta.xml
<CustomField>
    <fullName>DescontoServicos__c</fullName>
    <label>% Desconto Serviços</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>