force-app/main/default/objects/CodigoPromocional__c/fields/GeraCobrancaParceiro__c.field-meta.xml
<CustomField>
    <fullName>GeraCobrancaParceiro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gera Cobrança Parceiro</label>
    <type>Checkbox</type>
</CustomField>