force-app/main/default/objects/CodigoPromocional__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>CodigoPromocional__c</referenceTo>
    <relationshipLabel>Promoções</relationshipLabel>
    <relationshipName>Promocoes</relationshipName>
    <type>Lookup</type>
</CustomField>