force-app/main/default/objects/CodigoPromocional__c/fields/Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Parceiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parceiro</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promoções (Parceiro)</relationshipLabel>
    <relationshipName>PromocoesParceiro</relationshipName>
    <type>Lookup</type>
</CustomField>