force-app/main/default/objects/CodigoPromocional__c/fields/PrimeiraCompra__c.field-meta.xml
<CustomField>
    <fullName>PrimeiraCompra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primeira Compra</label>
    <type>Checkbox</type>
</CustomField>