force-app/main/default/objects/CodigoPromocional__c/fields/QtdUtilizada__c.field-meta.xml
<CustomField>
    <fullName>QtdUtilizada__c</fullName>
    <label>Quantidade Utilizada</label>
    <summaryForeignKey>PromocaoOportunidade__c.Promocao__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>