force-app/main/default/objects/CodigoPromocional__c/fields/QuantidadeDisponivel__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDisponivel__c</fullName>
    <label>Quantidade Disponível</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>