force-app/main/default/objects/CodigoPromocional__c/fields/SaldoUtilizacao__c.field-meta.xml
<CustomField>
    <fullName>SaldoUtilizacao__c</fullName>
    <formula>QuantidadeDisponivel__c - QtdUtilizada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Utilização</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>