force-app/main/default/objects/CodigoPromocional__c/fields/UsoUnico__c.field-meta.xml
<CustomField>
    <fullName>UsoUnico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uso único</label>
    <type>Checkbox</type>
</CustomField>