force-app/main/default/objects/CodigoPromocional__c/fields/ValorCobrancaParceiro__c.field-meta.xml
<CustomField>
    <fullName>ValorCobrancaParceiro__c</fullName>
    <label>Valor Cobrança Parceiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>