force-app/main/default/objects/CodigoPromocional__c/recordTypes/CodigoPromocional.recordType-meta.xml
<RecordType>
    <fullName>CodigoPromocional</fullName>
    <active>true</active>
    <label>Código Promocional</label>
</RecordType>