force-app/main/default/objects/CodigoPromocional__c/recordTypes/ModeloPromocaoParceiro.recordType-meta.xml
<RecordType>
    <fullName>ModeloPromocaoParceiro</fullName>
    <active>true</active>
    <label>Modelo Promoção Parceiro</label>
</RecordType>