force-app/main/default/objects/CodigoPromocional__c/recordTypes/PromocaoParceiro.recordType-meta.xml
<RecordType>
    <fullName>PromocaoParceiro</fullName>
    <active>true</active>
    <label>Promoção Parceiro</label>
</RecordType>