force-app/main/default/objects/CodigoPromocional__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>DataFinal__c</columns>
    <columns>DataInicial__c</columns>
    <columns>PrimeiraCompra__c</columns>
    <columns>QuantidadeDisponivel__c</columns>
    <columns>UsoUnico__c</columns>
    <columns>Desconto__c</columns>
    <columns>Ativo__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>